# viletech-engine

./: .gitattributes  .gitignore  Cargo.toml  Doxyfile  LICENSE-MIT  README.md  attrib.md  build.zig  build.zig.zon
.github/workflows/: continuous_integration.yml
client/: CMakeLists.txt  Cargo.toml  INSTALL  build.rs  vcpkg.json  viletech.nim  viletech.nimble  zdfs.nim
client/ICONS/: .gitattributes  viletech.desktop  viletech.exe.manifest
client/all/: t.nim
client/cmake/: FindLibMad.cmake  FindOgg.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindVorbis.cmake  Findlibzip.cmake  GetAvailableFlags.cmake  PkgConfigHelper.cmake
client/data/: .gitattributes  CMakeLists.txt
client/src/: CMakeLists.txt  actor.nim  actor.rs  args.nim  bindgen.nim  c.rs  c.zig  core.cpp  core.hpp  core.nim  core.zig  engine.nim  entt.nim  exports.nim  fixed.nim  flecs.nim  icon.rs  lib.rs  main.cpp  main.rs  platform.nim  root.zig  stdx.nim  vfs.nim
client/src/MUSIC/: .gitattributes
client/src/SDL/: i_main.c  i_system.c
client/src/dsda/: args.c  args.h
crates/client/: Cargo.toml  build.rs
crates/client/src/: icon.rs  lib.rs
doc/: style.md
engine/: .gitattributes  CMakeLists.txt  INSTALL
engine/cmake/: CheckBigEndian.cmake  FindDUMB.cmake  FindFluidSynth.cmake  FindPortMidi.cmake  FindSDL2.cmake  GetAvailableFlags.cmake  SelectDllConfigurations.cmake  config.h.cin
engine/src/: CMakeLists.txt  d_englsh.h  d_main.c  fxp.hpp  prelude.hpp  tflags.hpp  viletech.nim.h
engine/src/SDL/: i_main.c  i_video.c
engine/src/dsda/: args.c
engine/src/std/: any.hpp  array.hpp  bitset.hpp  cstdio.hpp  deque.hpp  flat_map.hpp  forward_list.hpp  initializer_list.hpp  list.hpp  map.hpp  memory.hpp  mutex.hpp  optional.hpp  queue.hpp  set.hpp  span.hpp  stack.hpp  string.hpp  string_view.hpp  thread.hpp  type_traits.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  (+3 more)
help/: color_range.md  doom_in_hexen.md  dsdapref.md  dsdhacked.md  hud.md  mapinfo.md  sndinfo.md  text_color.md  things_and_specials.md  udmf.md
help/guides/: building_on_macos.md  building_on_windows.md
prboom2/: CMakeLists.txt
prboom2/cmake/: GetAvailableFlags.cmake
prboom2/src/: CMakeLists.txt  d_imgui.c  d_imgui.h  d_main.c  g_game.c  gl_main.c  m_menu.c  m_misc.c  p_inter.c  p_pspr.c  st_stuff.c
spec/: README.md
spec/support/: utility.rb
udb/: DSDADoom_DoomUDMF.cfg
(+6 files in other folders)
