[workspace]
resolver = "2"
members = ["client"]
default-members = ["client"]

[workspace.package]
edition = "2021"
repository = "https://github.com/jerome-trc/viletech-engine"

[profile.release]
codegen-units = 4
lto = true
opt-level = 3
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
debug = true
lto = "thin"
strip = false

[workspace.dependencies]
clap = { version = "4.4.7", features = ["derive"] }

# Build only
bindgen = "0.69.4"
cbindgen = "0.26.0"
