[workspace]
resolver = "2"
members = []
default-members = []

[workspace.package]
authors = ["jerome-trc"]
edition = "2021"
repository = "https://github.com/jerome-trc/viletech-engine"

[profile.release]
codegen-units = 4
lto = true
opt-level = 3
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
debug = true
lto = "thin"
strip = false

[workspace.dependencies]
