[package]
name = "viletech-client"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = []
description = "Rust component of the VileTech Client"
homepage = "https://github.com/jerome-trc/viletech-engine/blob/master/crates/client"
keywords = ["doom", "viletech"]
license = "MIT OR Apache-2.0"
publish = false
repository.workspace = true

[lib]
name = "vtclient"
crate-type = ["staticlib"]

[dependencies]
bevy_ecs.workspace = true
bitflags.workspace = true
clap.workspace = true
egui.workspace = true
egui_glow.workspace = true
fixed.workspace = true
glow.workspace = true
nanorand.workspace = true
rayon.workspace = true

[build-dependencies]
bindgen.workspace = true
cbindgen.workspace = true
